--- a/src/components/signin/style.scss
+++ b/src/components/signin/style.scss
@@ -1,15 +1,24 @@
-@import '~style/helpers';
+// widgets colors variables
+$beige: #F4F1EA;
+$yellow: #FFBB41;
+$black: #37394C;
+$google-red: #EA4335;
+$facebook-blue: #3b5998;
+$white-sand: #FAF8F5;
 
 .signinWidget {
+  * {
+    box-sizing: border-box;
+  }
   position: relative;
   border-radius: 6px;
-  background: #FFFFFF;
+  background: #FFF;
   box-shadow: 0 10px 20px 0 rgba(0,0,0,0.10);
   width: 100%;
   max-width: 500px;
   margin: 30px auto 30px auto;
   padding: 15px;
-  font-family: 'Open Sans', sans-serif;
+  font-family: sans-serif;
   hr {
     opacity: 0.2;
     margin: 40px auto;
@@ -25,8 +34,8 @@
     }
   }
   h3 {
-    font-family: 'Montserrat', sans-serif;
-    color: @black;
+    font-family: sans-serif;
+    color: $black;
     font-size: 18px;
     margin-bottom: 30px;
   }
@@ -42,12 +51,11 @@
   .colTwo {
     width: 60%;
   }
-  box-sizing: border-box;
   input[type="text"] , input[type="password"] {
     height: 40px;
     line-height: 38px;
     width: 100%;
-    background: @white-sand;
+    background: $white-sand;
     border: none;
     border-radius: 4px;
     margin-bottom: 20px;
@@ -56,7 +64,6 @@
     font-size: 13px;
     font-weight: 100;
     padding: 0 12px;
-    box-sizing: border-box;
   }
 }
 
@@ -64,29 +71,28 @@
   height: 40px;
   width: 100%;
   max-width: 230px;
-  display: inline-block;
-  font-family: 'Montserrat', sans-serif;
+  font-family: sans-serif;
   text-transform: uppercase;
   font-size: 12px;
   text-align: center;
-  line-height: 38px;
+  line-height: 40px;
   text-decoration: none;
   border-radius: 3px;
   color: #FFF;
   &.google {
-    background: @google-red;
+    background: $google-red;
     margin: 15px auto;
     display: block;
   }
 
   &.facebook {
-    background: @facebook-blue;
+    background: $facebook-blue;
     margin: 15px auto;
     display: block;
   }
 
   &.default {
-    background: @yellow;
+    background: $yellow;
     margin: 0px 0 15px 0;
     display: block;
   }
@@ -103,22 +109,22 @@
 }
 
 .note {
-  font-family: 'Open Sans', sans-serif;
-  color: @black;
+  font-family: sans-serif;
+  color: $black;
   font-size: 13px;
   a {
-    color: @yellow;
+    color: $yellow;
     opacity: 1;
   }
 }
 
 .formFooter {
-  font-family: 'Open Sans', sans-serif;
-  color: @black;
+  font-family: sans-serif;
+  color: $black;
   opacity: 1;
   font-size: 13px;
   display: block;
   width: 100%;
   margin-bottom: 15px;
-  color: @yellow;
+  color: $yellow;
 }
